--- a/src/components/HiddenCards/hiddencard.css
+++ b/src/components/HiddenCards/hiddencard.css
@@ -29,7 +29,9 @@
   aspect-ratio: 1/cos(30deg);
   clip-path: polygon(50% -50%,100% 50%,50% 150%,0 50%);
   /* background: var(--color-light-1); */
-  background: linear-gradient(90deg, var(--color-dark-1), var(--color-white));
+  /* background: linear-gradient(90deg, var(--color-dark-1), var(--color-white)); */
+  background-image: url('../../assets/haxagon.avif');
+  background-size: 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center; 
@@ -53,8 +55,9 @@
     align-items: center;
     text-align: center;
     color: white;
-    /* background-image: url('../../assets/haxagon.avif'); */
-    background-image: url('https://i.pinimg.com/originals/34/1e/80/341e800b1f29d3e34ea2eba5a6af205c.gif');
+    /* background: url('../../assets/purpleImg.jpg'); */
+    background: #000;
+    /* background-image: url('https://i.pinimg.com/originals/a4/a8/f0/a4a8f07f482e9a4d0dcaf1d1f1456640.gif'); */
     background-size: 100% 100%;
   }
  
@@ -65,7 +68,8 @@
     /* text-shadow: 1px 1px 10px var(--color-light-2); */
      /* color: var(--color-dark-1); */
     /* background-size: 50% 50%; */
-    background: linear-gradient(to right,var(--color-dark-1),var(--color-white));;
+    /* background: linear-gradient(to right,var(--color-dark-1),var(--color-white));; */
+    background: #fff;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -77,7 +81,8 @@
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    font-size: 400%;
+    /* font-size: 400%; */
+    scale: 1.1;
 
 }
  
